{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 15,
  "lineage": "75766659-c210-ed61-1239-a2870bd511eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:056608532033:instance/i-06c5764aecb9ced2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c5764aecb9ced2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bbff87b8e33c1632",
            "private_dns": "ip-10-0-0-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.85",
            "public_dns": "ec2-44-192-69-133.compute-1.amazonaws.com",
            "public_ip": "44.192.69.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05061d1342fbeab41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0911e078fb097ce88",
            "tags": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tags_all": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07bc90fb7e6de53ea"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_ssm_parameter.amzn2_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056608532033:internet-gateway/igw-0f60d5acb058d293c",
            "id": "igw-0f60d5acb058d293c",
            "owner_id": "056608532033",
            "tags": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tags_all": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "vpc_id": "vpc-0820379d7da8ef057"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056608532033:route-table/rtb-0b3a191661768f0ae",
            "id": "rtb-0b3a191661768f0ae",
            "owner_id": "056608532033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f60d5acb058d293c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tags_all": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0820379d7da8ef057"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0713f43f13fd858c0",
            "route_table_id": "rtb-0b3a191661768f0ae",
            "subnet_id": "subnet-0911e078fb097ce88"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet1",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056608532033:security-group/sg-07bc90fb7e6de53ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bc90fb7e6de53ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "056608532033",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tags_all": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0820379d7da8ef057"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056608532033:subnet/subnet-0911e078fb097ce88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911e078fb097ce88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "056608532033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tags_all": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "vpc_id": "vpc-0820379d7da8ef057"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056608532033:vpc/vpc-0820379d7da8ef057",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3a5bf031190b8e9",
            "default_route_table_id": "rtb-07fae06a89db09100",
            "default_security_group_id": "sg-064e93a72d1822657",
            "dhcp_options_id": "dopt-069ab6f92d6d23066",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0820379d7da8ef057",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07fae06a89db09100",
            "owner_id": "056608532033",
            "tags": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            },
            "tags_all": {
              "billing_code": "ILLACCT8675309",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-globo-TEKSAVVY-web-app"
            }
          }
        }
      ]
    }
  ]
}